2012-04-19  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac: incremented version to 1.2.6 (1.2.5 had a bad tag)
	

	* src/tcpip.cpp (tcpip::print_packet): fixed error in fwrite().

2012-04-11  Simson Garfinkel  <simsong@mncrnpsedu.local>

	* created version 1.2.4 tag

2012-04-03  Simson Garfinkel  <simsong@imac3.home>

	* src/main.cpp (print_usage): fixed misspelling of name

	* src/tcpip.cpp (tcpdemux::tcpdemux): default outdir is now "."

2012-03-26  Simson Garfinkel  <simsong@imac3.home>

	* src/xml.cpp (xml::add_cpuid): better handling of CPUID instruction. Now it really should not show up on non-Intel architectures.

2012-03-19  Simson Garfinkel  <simsong@imac3.home>

	* src/xml.cpp: added unistd.h

2012-03-18  Simson Garfinkel  <simsong@imac3.local>

	* src/main.cpp (main): added printing stats for debug level 3.

	* src/datalink.cpp (find_handler): changed 'looking for handler' to debug level 2.

2012-03-18  Simson Garfinkel  <simsong@imac3.home>

	* src/tcpip.cpp (tcpdemux::close_all): Jeremey's FD ring has been replaced with an unordere dset.

	* src/tcpdemux.h (class tcpdemux): tcpdemux is now a class. By 1.3 it will be a linkable class separate from this program.

2012-03-11  Simson L. Garfinkel  <simsong@ps14412.dreamhostps.com>

	* configure.ac: added -funit-at-a-time 

2012-03-10  Simson Garfinkel  <simsong@imac3.home>

	* COPYING: updated to GPLv3

2012-03-10  Simson Garfinkel  <simsong@mucha>

	* src/xml.cpp (xml::xmlout): writing with size-length tag just outputs the value now.

2012-03-03  Simson Garfinkel  <simsong@it152983.ern.nps.edu>

	* configure.ac: changed verison number to 1.2.1

	* src/xml.cpp (xml::cpuid): added another #if defined(HAVE_ASM_CPUID) to protect another __asm__("cpuid")

2012-03-03  Simson Garfinkel  <simsong@imac3.home>

	* configure.ac: changed version number to 1.2.0

2012-03-09  Simson Garfinkel  <simsong@Mucha.local>

	* src/tcpip.cpp (tcpip::attempt_fopen): output files now opened in binary mode